--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title:            Blog
 tagline:          'A Jekyll theme'
 description:      'refreshed.'
 url:              https://yonghwanjang0.github.io
-baseurl:          '/hydeout'
+baseurl:          ''
                   # the optional subpath of your site, e.g. "/blog"
                   # NB: This applies to all pages in your Jekyll site.
                   # If you want to move just the blog index pages but keep
