--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ highlighter:      rouge
 # Setup
 title:            Blog
 tagline:          'A Jekyll theme'
-description:      'refreshed.'
+description:      '.'
 url:              https://yonghwanjang0.github.io/index.html
 baseurl:          ''
                   # the optional subpath of your site, e.g. "/blog"
